@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0
left to right direction

class Scanner {
}

class File {
}

class PrintWriter {
}

class CantVasMain {
}

class ProcessCommand {
}

class Storage {
    - {static} EXPENDITURE_FILE_PATH: String = "./data/expenditure.txt"
    - {static} TIMETABLE_FILE_PATH: String = "./data/timetable.txt"
    - {static} GPA_FILE_PATH: String = "./data/gpa.txt"
    + {static} createNewFile(type: String)
    + {static} writeModuleListToFile(moduleList: ModuleList)
    + {static} writeExpenditureToFile(expenses: ExpenditureList)
    + {static} readExpenditureFile(): ExpenditureList
    + {static} readGPAFile(): ModuleList
    + {static} readTimetableFile(): TimetableList
    - {static} processExpenditure(line: String): String
    - {static} processModule(line: String): Module
    - {static} processTimetable(line: String): String
    - {static} writeTimetableToFile(fw: PrintWriter, timetable: Class[][])
    - {static} writeDayTimetableToFile(fw: PrintWriter, timetable: Class[], day: int)
    - {static} writeHourTimetableToFile(fw: PrintWriter, timetable: Class, day: int)
    - {static} createDirectoryAndFile(directory: File, file: FIle)
}



class TimetableList {
}

class ExpenditureList {
}

package gpa {
    class ModuleList {
    }

    class ProcessListCommand {
    }
}

Storage <-> ModuleList: creates and uses >
TimetableList <- Storage: reads and writes <
ExpenditureList <- Storage: reads and writes <
Storage -> Scanner: creates and uses >
Storage -> File: creates and uses >
Storage -> PrintWriter: creates and uses >

CantVasMain ..> Storage: uses >
ProcessCommand ..> Storage: uses >
ProcessListCommand ..> Storage: uses >

@enduml